# agentic-ai-open-aml

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  mypy_errors.txt  plan.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
docs/: be-104-authentication.md  be-201-rag-hybrid-search.md  be-202-agent-orchestrator.md  be-203-tool-registry.md  be-204-specialised-agents.md  be-205-alert-triage.md  be-206-transaction-monitoring.md  be-301-sar-smr-narrative-agent.md  be-302-kyc-cdd-automation.md  be-303-regulatory-report-submission.md  be-304-entity-unwrapping.md  be-305-configurable-rule-engine.md  be-401-ai-security-guardrails.md  be-402-iso42001-governance-logging.md  be-403-data-retention-privacy.md  be-404-rbac-hardening.md  be-405-model-inventory-lifecycle.md  be-501-llm-as-judge.md  be-502-opentelemetry-instrumentation.md  be-503-ab-testing-framework.md  be-504-golden-dataset-curation.md  be-601-crm-integrations.md  be-602-multi-jurisdiction-regulatory.md  be-603-webhook-event-platform.md  be-604-federated-typology-sharing.md  design-phase-0.md  design-phase-1.md  design-phase-2.md  design-phase-3.md  design-phase-4.md  design-phase-5.md  design-phase-6.md  development-plan.md  high-level-design.md
docs/adr/: 001-project-structure.md
src/aml/: app.py  main.py
src/aml/agents/: __init__.py  nodes.py  orchestrator.py  state.py
src/aml/agents/specialized/: base.py
src/aml/agents/tools/: protocol.py  registry.py
src/aml/api/: __init__.py  health.py  middleware.py
src/aml/api/models/: __init__.py  rag.py
src/aml/api/routers/: agents.py  alerts.py  auth.py  entities.py  governance.py  kyc.py  rag.py  reports.py  rules.py  transactions.py
src/aml/core/: __init__.py  config.py  context.py  logging.py
src/aml/db/: __init__.py  base.py  session.py
src/aml/db/crud/: __init__.py  base.py
src/aml/db/models/: __init__.py  alert.py  case.py  cdd_record.py  customer.py  governance_log.py  report.py  rule.py  tenant.py  transaction.py  user.py
src/aml/observability/: spans.py
src/aml/services/: __init__.py
tests/: conftest.py  test_agent_orchestrator.py  test_alert_triage.py  test_auth.py  test_data_retention.py  test_db.py  test_dry_run.py  test_ecosystem.py  test_embedding_ollama.py  test_entity_resolver.py  test_evaluation.py  test_evaluator_cache.py  test_governance.py  test_guardrails.py  test_health.py  test_kyc_pipeline.py  test_llm_azure.py  test_model_registry.py  test_monitoring_anomaly.py  test_monitoring_api.py  test_monitoring_batch.py  test_monitoring_evaluator.py  test_monitoring_rules.py  test_narrative_generation.py  test_narrative_tool.py  test_narrative_verification.py  test_providers_unit.py  test_rag.py  test_rbac.py  test_report_model.py  test_report_submission.py  test_report_templates.py  test_reports_api.py  test_risk_scoring.py  test_rule_cache.py  test_rule_management.py  test_rule_models.py  test_rule_seeder.py  test_rules_api.py  test_tool_registry.py
(+74 files in other folders)
